--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -89,6 +89,14 @@
             }
           }
         }
+        &.router-link-active {
+          background-color: #fff;
+          li{
+            .svg-icon,span{
+              color: #3d6df8;
+            }
+          }
+        }
       }
     }
 
